<resources>
  <string name="app_name">onTrack</string>
  <string name="app_name_">digit</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="login_failure">Unable to sign in with the provided credentials</string>
  <string name="permissions_title">Permissions</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="menu_timeline">Timeline</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_puzzle">Puzzle</string>
  <string name="focus">Focus</string>
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="sign_out">Sign out</string>
  <string name="title_activity_settings">activity_settings</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="info_ok">OK</string>
</resources>
