<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="edu.com.deepdive.ontrack.controller.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home"/>

  <fragment
    android:id="@+id/nav_puzzle"
    android:label="@string/menu_puzzle"
    android:name="edu.com.deepdive.ontrack.controller.ui.puzzle.PuzzleFragment"
    tools:layout="@layout/fragment_puzzle"/>

  <fragment
    android:id="@+id/nav_timeline"
    android:label="@string/menu_timeline"
    android:name="edu.com.deepdive.ontrack.controller.ui.timeline.TimelineFragment"
    tools:layout="@layout/fragment_timeline"/>

  <fragment
    android:id="@+id/nav_tools"
    android:label="@string/menu_tools"
    android:name="edu.com.deepdive.ontrack.controller.ui.tools.ToolsFragment"
    tools:layout="@layout/fragment_tools"/>

  <fragment
    android:id="@+id/nav_share"
    android:label="@string/menu_share"
    android:name="edu.com.deepdive.ontrack.controller.ui.share.ShareFragment"
    tools:layout="@layout/fragment_share"/>

  <fragment
    android:id="@+id/nav_send"
    android:label="@string/menu_send"
    android:name="edu.com.deepdive.ontrack.controller.ui.send.SendFragment"
    tools:layout="@layout/fragment_send"/>
</navigation>